[project]
name = "todo-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=4.1.0",
    "dash-bootstrap-components>=2.0.4",
    "numpy>=2.4.4",
    "plotly>=6.7.0",
    "pydantic>=2.13.3",
    "ruff>=0.15.11",
]
